tests/ui/rfcs/rfc-2632-const-trait-impl/call-generic-method-dup-bound.stderr
warning: the feature `effects` is incomplete and may not be safe to use and/or cause compiler crashes
  --> $DIR/call-generic-method-dup-bound.rs:4:30
   |
LL | #![feature(const_trait_impl, effects)]
   |                              ^^^^^^^
   |
   = note: see issue #102090 <https://github.com/rust-lang/rust/issues/102090> for more information
   = note: `#[warn(incomplete_features)]` on by default

error: using `#![feature(effects)]` without enabling next trait solver globally
   |
   = note: the next trait solver must be enabled globally for the effects feature to work correctly
   = help: use `-Znext-solver` to enable

error: const `impl` for trait `PartialEq` which is not marked with `#[const_trait]`
  --> $DIR/call-generic-method-dup-bound.rs:8:12
   |
LL | impl const PartialEq for S {
   |            ^^^^^^^^^
   |
   = note: marking a trait with `#[const_trait]` ensures all default method bodies are `const`
   = note: adding a non-const method body in the future would be a breaking change

error: `~const` can only be applied to `#[const_trait]` traits
  --> $DIR/call-generic-method-dup-bound.rs:19:44
   |
LL | const fn equals_self<T: PartialEq + ~const PartialEq>(t: &T) -> bool {
   |                                            ^^^^^^^^^

error: `~const` can only be applied to `#[const_trait]` traits
  --> $DIR/call-generic-method-dup-bound.rs:19:44
   |
LL | const fn equals_self<T: PartialEq + ~const PartialEq>(t: &T) -> bool {
   |                                            ^^^^^^^^^
   |
   = note: duplicate diagnostic emitted due to `-Z deduplicate-diagnostics=no`

error: `~const` can only be applied to `#[const_trait]` traits
  --> $DIR/call-generic-method-dup-bound.rs:26:37
   |
LL | const fn equals_self2<T: A + ~const PartialEq>(t: &T) -> bool {
   |                                     ^^^^^^^^^

error: `~const` can only be applied to `#[const_trait]` traits
  --> $DIR/call-generic-method-dup-bound.rs:26:37
   |
LL | const fn equals_self2<T: A + ~const PartialEq>(t: &T) -> bool {
   |                                     ^^^^^^^^^
   |
   = note: duplicate diagnostic emitted due to `-Z deduplicate-diagnostics=no`

error: aborting due to 6 previous errors; 1 warning emitted

